--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ background-color: #fff;
 }*/
 /*Mini CSS Grid* For Footer*/
 .container{margin:0 auto;padding:0 20px}.row{box-sizing:border-box;display:-webkit-box;-webkit-box-flex:0;-webkit-box-orient:horizontal;-webkit-box-direction:normal;display:-webkit-flex;display:flex;-webkit-flex:0 1 auto;flex:0 1 auto;-webkit-flex-flow:row wrap;flex-flow:row wrap}.col-sm,[class^='col-sm-'],[class^='col-sm-offset-'],.row[class*='cols-sm-']>*{box-sizing:border-box;-webkit-box-flex:0;-webkit-flex:0 0 auto;flex:0 0 auto;padding:0 4px}.col-sm,.row.cols-sm>*{-webkit-box-flex:1;max-width:100%;-webkit-flex-grow:1;flex-grow:1;-webkit-flex-basis:0;flex-basis:0}.col-sm-1,.row.cols-sm-1>*{max-width:8.3333333333%;-webkit-flex-basis:8.3333333333%;flex-basis:8.3333333333%}.col-sm-2,.row.cols-sm-2>*{max-width:16.6666666667%;-webkit-flex-basis:16.6666666667%;flex-basis:16.6666666667%}.col-sm-3,.row.cols-sm-3>*{max-width:25%;-webkit-flex-basis:25%;flex-basis:25%}.col-sm-4,.row.cols-sm-4>*{max-width:33.3333333333%;-webkit-flex-basis:33.3333333333%;flex-basis:33.3333333333%}.col-sm-5,.row.cols-sm-5>*{max-width:41.6666666667%;-webkit-flex-basis:41.6666666667%;flex-basis:41.6666666667%}.col-sm-6,.row.cols-sm-6>*{max-width:50%;-webkit-flex-basis:50%;flex-basis:50%}.col-sm-7,.row.cols-sm-7>*{max-width:58.3333333333%;-webkit-flex-basis:58.3333333333%;flex-basis:58.3333333333%}.col-sm-8,.row.cols-sm-8>*{max-width:66.6666666667%;-webkit-flex-basis:66.6666666667%;flex-basis:66.6666666667%}.col-sm-9,.row.cols-sm-9>*{max-width:75%;-webkit-flex-basis:75%;flex-basis:75%}.col-sm-10,.row.cols-sm-10>*{max-width:83.3333333333%;-webkit-flex-basis:83.3333333333%;flex-basis:83.3333333333%}.col-sm-11,.row.cols-sm-11>*{max-width:91.6666666667%;-webkit-flex-basis:91.6666666667%;flex-basis:91.6666666667%}.col-sm-12,.row.cols-sm-12>*{max-width:100%;-webkit-flex-basis:100%;flex-basis:100%}.col-sm-offset-0{margin-left:0}.col-sm-offset-1{margin-left:8.3333333333%}.col-sm-offset-2{margin-left:16.6666666667%}.col-sm-offset-3{margin-left:25%}.col-sm-offset-4{margin-left:33.3333333333%}.col-sm-offset-5{margin-left:41.6666666667%}.col-sm-offset-6{margin-left:50%}.col-sm-offset-7{margin-left:58.3333333333%}.col-sm-offset-8{margin-left:66.6666666667%}.col-sm-offset-9{margin-left:75%}.col-sm-offset-10{margin-left:83.3333333333%}.col-sm-offset-11{margin-left:91.6666666667%}.col-sm-normal{-webkit-order:initial;order:initial}.col-sm-first{-webkit-order:-999;order:-999}.col-sm-last{-webkit-order:999;order:999}@media screen and (min-width: 768px){.col-md,[class^='col-md-'],[class^='col-md-offset-'],.row[class*='cols-md-']>*{box-sizing:border-box;-webkit-box-flex:0;-webkit-flex:0 0 auto;flex:0 0 auto;padding:0 4px}.col-md,.row.cols-md>*{-webkit-box-flex:1;max-width:100%;-webkit-flex-grow:1;flex-grow:1;-webkit-flex-basis:0;flex-basis:0}.col-md-1,.row.cols-md-1>*{max-width:8.3333333333%;-webkit-flex-basis:8.3333333333%;flex-basis:8.3333333333%}.col-md-2,.row.cols-md-2>*{max-width:16.6666666667%;-webkit-flex-basis:16.6666666667%;flex-basis:16.6666666667%}.col-md-3,.row.cols-md-3>*{max-width:25%;-webkit-flex-basis:25%;flex-basis:25%}.col-md-4,.row.cols-md-4>*{max-width:33.3333333333%;-webkit-flex-basis:33.3333333333%;flex-basis:33.3333333333%}.col-md-5,.row.cols-md-5>*{max-width:41.6666666667%;-webkit-flex-basis:41.6666666667%;flex-basis:41.6666666667%}.col-md-6,.row.cols-md-6>*{max-width:50%;-webkit-flex-basis:50%;flex-basis:50%}.col-md-7,.row.cols-md-7>*{max-width:58.3333333333%;-webkit-flex-basis:58.3333333333%;flex-basis:58.3333333333%}.col-md-8,.row.cols-md-8>*{max-width:66.6666666667%;-webkit-flex-basis:66.6666666667%;flex-basis:66.6666666667%}.col-md-9,.row.cols-md-9>*{max-width:75%;-webkit-flex-basis:75%;flex-basis:75%}.col-md-10,.row.cols-md-10>*{max-width:83.3333333333%;-webkit-flex-basis:83.3333333333%;flex-basis:83.3333333333%}.col-md-11,.row.cols-md-11>*{max-width:91.6666666667%;-webkit-flex-basis:91.6666666667%;flex-basis:91.6666666667%}.col-md-12,.row.cols-md-12>*{max-width:100%;-webkit-flex-basis:100%;flex-basis:100%}.col-md-offset-0{margin-left:0}.col-md-offset-1{margin-left:8.3333333333%}.col-md-offset-2{margin-left:16.6666666667%}.col-md-offset-3{margin-left:25%}.col-md-offset-4{margin-left:33.3333333333%}.col-md-offset-5{margin-left:41.6666666667%}.col-md-offset-6{margin-left:50%}.col-md-offset-7{margin-left:58.3333333333%}.col-md-offset-8{margin-left:66.6666666667%}.col-md-offset-9{margin-left:75%}.col-md-offset-10{margin-left:83.3333333333%}.col-md-offset-11{margin-left:91.6666666667%}.col-md-normal{-webkit-order:initial;order:initial}.col-md-first{-webkit-order:-999;order:-999}.col-md-last{-webkit-order:999;order:999}}@media screen and (min-width: 1280px){.col-lg,[class^='col-lg-'],[class^='col-lg-offset-'],.row[class*='cols-lg-']>*{box-sizing:border-box;-webkit-box-flex:0;-webkit-flex:0 0 auto;flex:0 0 auto;padding:0 4px}.col-lg,.row.cols-lg>*{-webkit-box-flex:1;max-width:100%;-webkit-flex-grow:1;flex-grow:1;-webkit-flex-basis:0;flex-basis:0}.col-lg-1,.row.cols-lg-1>*{max-width:8.3333333333%;-webkit-flex-basis:8.3333333333%;flex-basis:8.3333333333%}.col-lg-2,.row.cols-lg-2>*{max-width:16.6666666667%;-webkit-flex-basis:16.6666666667%;flex-basis:16.6666666667%}.col-lg-3,.row.cols-lg-3>*{max-width:25%;-webkit-flex-basis:25%;flex-basis:25%}.col-lg-4,.row.cols-lg-4>*{max-width:33.3333333333%;-webkit-flex-basis:33.3333333333%;flex-basis:33.3333333333%}.col-lg-5,.row.cols-lg-5>*{max-width:41.6666666667%;-webkit-flex-basis:41.6666666667%;flex-basis:41.6666666667%}.col-lg-6,.row.cols-lg-6>*{max-width:50%;-webkit-flex-basis:50%;flex-basis:50%}.col-lg-7,.row.cols-lg-7>*{max-width:58.3333333333%;-webkit-flex-basis:58.3333333333%;flex-basis:58.3333333333%}.col-lg-8,.row.cols-lg-8>*{max-width:66.6666666667%;-webkit-flex-basis:66.6666666667%;flex-basis:66.6666666667%}.col-lg-9,.row.cols-lg-9>*{max-width:75%;-webkit-flex-basis:75%;flex-basis:75%}.col-lg-10,.row.cols-lg-10>*{max-width:83.3333333333%;-webkit-flex-basis:83.3333333333%;flex-basis:83.3333333333%}.col-lg-11,.row.cols-lg-11>*{max-width:91.6666666667%;-webkit-flex-basis:91.6666666667%;flex-basis:91.6666666667%}.col-lg-12,.row.cols-lg-12>*{max-width:100%;-webkit-flex-basis:100%;flex-basis:100%}.col-lg-offset-0{margin-left:0}.col-lg-offset-1{margin-left:8.3333333333%}.col-lg-offset-2{margin-left:16.6666666667%}.col-lg-offset-3{margin-left:25%}.col-lg-offset-4{margin-left:33.3333333333%}.col-lg-offset-5{margin-left:41.6666666667%}.col-lg-offset-6{margin-left:50%}.col-lg-offset-7{margin-left:58.3333333333%}.col-lg-offset-8{margin-left:66.6666666667%}.col-lg-offset-9{margin-left:75%}.col-lg-offset-10{margin-left:83.3333333333%}.col-lg-offset-11{margin-left:91.6666666667%}.col-lg-normal{-webkit-order:initial;order:initial}.col-lg-first{-webkit-order:-999;order:-999}.col-lg-last{-webkit-order:999;order:999}}
+/*Gallery*/
 .gallery {
 text-align:center!important;
 margin:auto;
@@ -28,6 +29,23 @@ margin:auto;
 .gallery h4 {
 text-align:center!important;
 margin:auto;
+}
+.gallery img {
+    border:1px solid rgba(18,30,51, 0.1);
+    -moz-border-radius: 5px!important;
+    -webkit-border-radius: 5px!important;
+    -khtml-border-radius: 5px!important;
+    border-radius: 5px!important;
+    padding-top: 10px;
+    padding-bottom:10px;
+    width:80%!important;
+    height:80%!important;
+    margin: 0;
+}
+.map {
+padding-top:10px; 
+width:100%;
+height:100%; 
 }
 /*Map Pop Up*/
 .info {
@@ -44,8 +62,12 @@ padding-bottom: 10px;
 }
 /*Cart Page*/
 #cart {
-padding:10px;
+padding-top:20px;
+padding-bottom:20px;
+padding-right:0px;
+padding-left:0px;
 margin:auto;
+text-align:justify;
 }
 #cart h4 a:hover{
 color:#808080;
@@ -72,38 +94,48 @@ width: 130px;
 .wpcf7 input[type="text"]{ 
 margin-top:5px;
 width: 100%;
+-khtml-border-radius: 5px!important;
+  -webkit-border-radius: 5px!important; 
+  -moz-border-radius: 5px!important; 
+  border-radius: 5px!important; 
 }
-
 .wpcf7 input[type="tel"]{ 
 margin-top:5px;
 width: 100%;
+-khtml-border-radius: 5px!important;
+  -webkit-border-radius: 5px!important; 
+  -moz-border-radius: 5px!important; 
+  border-radius: 5px!important; 
 }
 .wpcf7 input[type="email"]{ 
 margin-top:5px;
 width: 100%;
+-khtml-border-radius: 5px!important;
+  -webkit-border-radius: 5px!important; 
+  -moz-border-radius: 5px!important; 
+  border-radius: 5px!important; 
 }
 .textarea { 
 margin-top:5px;
 width: 100%;
+-khtml-border-radius: 5px!important;
+  -webkit-border-radius: 5px!important; 
+  -moz-border-radius: 5px!important; 
+  border-radius: 5px!important; 
 }
 .select { 
 padding: 5px;
 background-color: #fff;
-}*/
+-khtml-border-radius: 5px!important;
+  -webkit-border-radius: 5px!important; 
+  -moz-border-radius: 5px!important; 
+  border-radius: 5px!important; 
+}
 /*Footer*/
 .site-footer #copyright a:hover {
 text-decoration:none!important;
 border-bottom:none!important;
-}
-#colophon #copyright a:hover {
-text-decoration:none!important;
-border-bottom:none!important;
-}
-,/*Right Side*/
-#copyright a:hover {
-color: #808080;
-text-decoration:none!important;
-border-bottom:none!important;
+color: #808080!important;
 }
 #copyright a {color: #c0c0c0;}
 #copyright {
@@ -122,87 +154,14 @@ text-align:center;
 #navmenu {text-align:center;}
 #navmenu ul {margin: 0; padding: 0; list-style-type: none; list-style-image: none; }
 #navmenu li {display:inline;padding: 5px 10px 5px 10px;}
-/*Woocommerce Extra Styles*/
+/*Woocommerce Styles*/
 /********************SHOP PAGE LAYOUT ************************************/
 /*.woocommerce ul.products li.product, .woocommerce-page ul.products li.product {
     border:2px solid rgba(18,30,51, 0.1);
     border-radius: 10px;
 
 }*/
-.woocommerce a.button,
-.woocommerce button.button, 
-.woocommerce input.button, 
-.woocommerce #respond input#submit, 
-.woocommerce #content input.button, 
-.woocommerce-page a.button, 
-.woocommerce-page button.button, 
-.woocommerce-page input.button, 
-.woocommerce-page #respond input#submit, 
-.woocommerce-page #content input.button {
-  -khtml-border-radius: 10px!important;
-  -webkit-border-radius: 10px!important; 
-  -moz-border-radius: 10px!important; 
-  border-radius: 10px!important; 
-}
-/********************END SHOP PAGE LAYOUT *************************************/
-/*Hide Clear Text on variation dropdown*/
-.reset_variations {
-display: none !important;
-}
-/*Category Page Titles*/
-.term-description h4,
-.term-description h3 {
-text-align:center!important;
-padding:5px!important;
-}
-/*Sidebar Search Box*/
-.aws-search-field {
-background:#fff!important;
-}
-/*Empty Cart Butto
-.emptycart {
-text-align:center;
-padding:10px;
-}*/
-/*Return to Shop button Continue Shopping Main Pages*/
-.return-to-shop a.button.wc-backward {
-background:#fff!important;
-border: solid 1px #000;
-color:#000;
-}
-.return-to-shop a.button.wc-backward:hover {
-background:rgba(18,30,51, 0.6)!important;
-border: none!important;
-}
-/*Return to Shop button Browse Shop Mini Cart*/
-#return a.button.wc-forward {
-background:#fff!important;
-border: solid 1px #000;
-color:#000;
-}
-#return a.button.wc-forward:hover {
-background:rgba(18,30,51, 0.6)!important;
-border: none!important;
-color:#fff!important;
-}
-/*Hide Cart Notice On Checkout*/
-.woocommerce-checkout .woocommerce-message {display: none !important;}
-/*View Cart Button
-.woocommerce-message a.button.wc-forward {
-   -moz-border-radius: 10px!important;
-    -webkit-border-radius: 10px!important;
-    -khtml-border-radius: 10px!important;
-    border-radius: 10px!important;
-    background: #fff!important;
-    color: #202020!important;
-    border: solid 1px!important;
-}
-.woocommerce-message a.button.wc-forward:hover {
-color: #fff!important;
-border: solid 1px!important;
-background: #121e33!important;
-}*/
-/*Top of pages breadcrumb*/
+/*Top of all pages breadcrumb*/
 .woocommerce-breadcrumb {
     padding: 10px 20px;
     font-size: 1em;
@@ -210,23 +169,12 @@ background: #121e33!important;
 .woocommerce-breadcrumb a {
      color:#000 !important;
 }
-/*Cart Totals H2
-.woocommerce .cart-collaterals .cart_totals, .woocommerce-page .cart-collaterals .cart_totals {
-    width: 100%;
+.woocommerce-breadcrumb a:hover {
+     color:#808080!important;
 }
-.cart_totals h2, .shipping_calculator h2 {
-    margin-bottom: 10px;
-    color: #000!important;
-    background-color: #fff!important;
-    border:solid 1px;
-    text-align: center;
-    -moz-border-radius: 10px!important;
-    -webkit-border-radius: 10px!important;
-    -khtml-border-radius: 10px!important;
-    border-radius: 10px!important;
-    padding: 10px;
-}*/
-.sale del .woocommerce-Price-amount  {display:none !important;}
+/*Hide Variation Price*/
+.woocommerce-variation-price {display:none!important;}
+/*.woocommerce-Price-amount {display:none !important;}*/
 /*Image Borders*/
 .woocommerce-LoopProduct-link img {
 border:2px solid rgba(18,30,51, 0.1);
@@ -252,12 +200,146 @@ border:2px solid rgba(18,30,51, 0.1);
     height:100%!important;
     margin: 0;
 }
+/*Category Page Titles*/
+.term-description h4,
+.term-description h3 {
+text-align:center!important;
+padding:5px!important;
+}
+/********************END SHOP PAGE LAYOUT *************************************/
+/*Buttons*/
+.woocommerce a.button,
+.woocommerce button.button, 
+.woocommerce input.button, 
+.woocommerce #respond input#submit, 
+.woocommerce #content input.button, 
+.woocommerce-page a.button, 
+.woocommerce-page button.button, 
+.woocommerce-page input.button, 
+.woocommerce-page #respond input#submit, 
+.woocommerce-page #content input.button {
+  -khtml-border-radius: 10px!important;
+  -webkit-border-radius: 10px!important; 
+  -moz-border-radius: 10px!important; 
+  border-radius: 10px!important; 
+}
+/*Hide Clear Text on variation dropdown*/
+.reset_variations {
+display: none !important;
+}
+/*AWS Search Box Global*/
+.aws-search-field {
+background:#fff!important;
+}
+/*Return to Shop button Browse Shop Mini Cart*/
+#return a.button.wc-forward {
+background:#fff!important;
+border: solid 1px #000;
+color:#000;
+}
+#return a.button.wc-forward:hover {
+background:rgba(18,30,51, 0.6)!important;
+border: none!important;
+color:#fff!important;
+}
+/*Cart - Checkout - Order - Cart Empty Page*/
+/*Empty Cart Button*/
+.emptycart {
+text-align:center;
+margin:auto!important;
+padding:10px;
+}
+/*Search Box Sidebar Widget*/
+.widget_aws_widget .aws-container .aws-search-field {
+margin-top:none;
+ margin-bottom:20px;
+ margin-left:auto; 
+ margin-right:auto;
+ text-align:left;
+ width:100%;
+}
+.widget_aws_widget .aws-container .aws-search-field::placeholder {
+font:inherit;
+font-size:1.5em!important;
+font-weight:300;
+color:#808080!important;
+}
+/*Search Box on Cart Page*/
+.woocommerce .shopsearch .aws-container .aws-search-field {
+ margin-top:none;
+ margin-bottom:none;
+ margin-left:auto; 
+ margin-right:auto;
+ text-align:center;
+ width:100%;
+}
+/*Search Box Text Placeholder Cart Page*/
+.woocommerce .shopsearch .aws-container .aws-search-field::placeholder {
+font:inherit;
+font-size:1.5em!important;
+font-weight:300;
+color:#808080!important;
+}
+/*Return Shopping Button*/
+.return-to-shop a.button.wc-forward {
+background:#fff!important;
+border: solid 1px #000;
+color:#000;
+margin:auto!important;
+text-align:center;
+}
+.return-to-shop a.button.wc-forward:hover {
+background:rgba(18,30,51, 0.6)!important;
+border: none!important;
+}
+/*Place order text*/
+.woocommerce .return-to-shop h2 {
+text-align:center;
+width:200px!important;
+margin-top:5px;
+margin-bottom:0px;
+margin-left:auto;
+margin-right:auto;
+}
+/*Hide Cart Notice On Checkout*/
+.woocommerce-checkout .woocommerce-message {display: none !important;}
+/*END of Cart - Checkout - Order - Cart Empty Page*/
+/*View Cart Button
+.woocommerce-message a.button.wc-forward {
+   -moz-border-radius: 10px!important;
+    -webkit-border-radius: 10px!important;
+    -khtml-border-radius: 10px!important;
+    border-radius: 10px!important;
+    background: #fff!important;
+    color: #202020!important;
+    border: solid 1px!important;
+}
+.woocommerce-message a.button.wc-forward:hover {
+color: #fff!important;
+border: solid 1px!important;
+background: #121e33!important;
+}*/
 /*Mini Cart*/
 .product_list_widget img {
 width:60px!important;
 height:60px!important;
 border:none!important;
 }
+/*Cart Totals H2
+
+.cart_totals h2, .shipping_calculator h2 {
+    margin-bottom: 10px;
+    color: #000!important;
+    background-color: #fff!important;
+    border:solid 1px;
+    text-align: center;
+    -moz-border-radius: 10px!important;
+    -webkit-border-radius: 10px!important;
+    -khtml-border-radius: 10px!important;
+    border-radius: 10px!important;
+    padding: 10px;
+}*/
+
 
 /*
 
